# alfred-pokedex

./: Cargo.toml  poke.json
src/: lib.rs  main.rs  sprite.rs  translate.rs
src/graphql/: get_pokemon.graphql  get_pokemon.rs  mod.rs
