[package]
name = "pokedex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alfred = "4.0.2"
anyhow = "1.0.48"
graphql_client = { version = "0.10.0", features = ["reqwest"] }
reqwest = "0.11.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
tokio = { version = "1.11.0", features = ["full"] }
